Fix clipping of scroll down button icon
Use <a> instead of <button> to prevent rendering quirks.

--- a/less/build_vizor2teaser.less
+++ b/less/build_vizor2teaser.less
@@ -173,8 +173,8 @@ body {
 }
 
 .scroll-down-button {
+    display: inline-block;
     background: transparent;
-    -webkit-appearance: none;
     outline: none;
     border: none;
     cursor: pointer;
